tests/conflict_markers.sy

start :: fn do
<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2
end
// error: Error::GitConflictError { span: Span { line: 3 , .. }, .. }
